2006-07-24  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* lib/ephy-spell-check.c: (ephy_spell_check_init):

	Set default dictionary based on applicable locale names.

2006-07-24  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/certificate-dialogs.glade:
	
	Make this a vbox, not a table.

2006-07-24  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-password-dialog.c:
	
	Fix default activation.
	
	* data/glade/form-signing-dialog.glade:
	* embed/mozilla/GeckoFormSigningDialog.cpp:
	
	Fix content packing options.

2006-07-24  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/certificate-dialogs.glade:
	
	Fix spacings, and don't use dummy text.

2006-07-24  Christian Persch  <chpe@cvs.gnome.org>

	* data/ui/epiphany-ui.xml:
	* src/ephy-statusbar.c: (ephy_statusbar_class_init),
	(padlock_button_press_cb), (create_statusbar_security_icon):
	* src/ephy-statusbar.h:
	* src/ephy-window.c: (ephy_window_constructor):
	* src/window-commands.c: (window_cmd_view_page_security_info),
	(window_cmd_help_about):
	* src/window-commands.h:

	Add page security info dialogue from Certificates extension.

2006-07-24  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c: (match_selected_cb):

	Reset IM context before activation. Bug #348478, patch by
	Nguyễn Thái Ngọc Duy.

2006-07-23  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/Makefile.am:

	Missing GeckoFormSigningDialog entries.

2006-07-22  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c: (cmd_bookmarks_export):

	Add accel. Bug #337913.

2006-07-22  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/mozilla/GtkNSSDialogs.h:
	* embed/mozilla/MozRegisterComponents.cpp:

	Implement nsIDOMCryptoDialogs, nsITokenDialogs and
	nsITokenPasswordDialogs. Bug #312869.

	* embed/mozilla/EphyUtils.cpp:
	* embed/mozilla/EphyUtils.h:

	Add a helper function to get the DOM window off the native