@@ -1,3 +1,14 @@
+2006-07-26  Luca Ferretti  <elle.uca@libero.it>
+
+	* lib/ephy-stock-icons.c:
+	* lib/ephy-stock-icons.h:
+	* src/ephy-window.c:
+
+	Define STOCK_NEW_WINDOW with named icon "window-new" and use it
+	in File -> New Window. Use "tab-new", "bookmark-new" and 
+	"mail-forward" named icons from Icon Naming Standard for related
+	actions. A first step to fix bug # 348350
+	
 2006-07-24  Jean-François Rameau  <jframeau@cvs.gnome.org>
 
 	* lib/ephy-spell-check.c: (ephy_spell_check_init):
